added a dzen2 bar in i3bar. Then edited the .conkyrc to parse information to dzen bar. Added colors

--- a/.conkyrc
+++ b/.conkyrc
@@ -1,31 +1,16 @@
-# Conky, a system monitor, based on torsmo
-#
-# Any original torsmo code is licensed under the BSD license
-#
-# All code written since the fork of torsmo is licensed under the GPL
-#
-# Please see COPYING for details
-#
-# Copyright (c) 2004, Hannu Saransaari and Lauri Hakkarainen
-# Copyright (c) 2005-2010 Brenden Matthews, Philip Kovacs, et. al. (see AUTHORS)
-# All rights reserved.
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
+# ##########################################
+# .conkyrc by Simone Guercio
+# last edit 09/01/12
+# meant tu be used with dzen (hence the ^fg() stuff) and i3bar
+# changelog:
+# 09/01/12 added colors
+# ########################################
 
 alignment top_middle
 background no
 border_width 0
+border_inner_margin 0
+border_outer_margin 0
 cpu_avg_samples 2
 default_color white
 default_outline_color white
@@ -36,25 +21,27 @@ draw_outline no
 draw_shades no
 use_xft yes
 xftfont DejaVu Sans Mono:size=8
+#xftfont Inconsolata:size=8
+format_human_readable 1
 gap_x 155
 gap_y 10
 #minimum_size 5 5
 net_avg_samples 2
 no_buffers yes
-out_to_x yes
-out_to_console no
+out_to_x no
+out_to_console yes
 out_to_ncurses no
 out_to_stderr no
 extra_newline no
-own_window yes
+own_window no
 own_window_class Conky
 own_window_type dock
 stippled_borders 0
 update_interval 3.0
 uppercase no
-use_spacer none
+use_spacer left
 show_graph_scale no
 show_graph_range no
 
 TEXT
-Up: $uptime_short ${color #FFFF00}Kernel: $kernel | HDtemp: ${hddtemp}°C | temp: ${execpi 8 sensors | grep 'Core 0' | cut -c 16-22} MEM: ${membar 5,10} CPU: ${cpu 0}% @ $freq_g GHz | ${fs_free /}/${fs_size /} ${fs_bar 5,10 /} | data: ${fs_free /mnt/data}/${fs_size /mnt/data} ${fs_bar 5,10 /mnt/data} | ${if_up wlan0}wifi: ${wireless_essid wlan0} ${wireless_link_qual wlan0}% $endif | ${time %a %d %H:%M}
+^fg(\#ff9900)Up^fg() $uptime_short ^fg(\#66ccff)|^fg() ^fg(\#ff9900)Mem^fg() $mem ${membar 5,10} ^fg(\#66ccff)|^fg() ^fg(\#ff9900)CPU^fg() ${cpu 0}% @ $freq_g GHz ^fg(\#66ccff)|^fg() ^fg(\#ff9900)Temp^fg() ${execi 5 sensors | grep 'Core 0' | cut -c 16-22} ^fg(\#66ccff)|^fg() ^fg(\#ff9900)HDtemp^fg() ${hddtemp}°C ^fg(\#66ccff)|^fg() ^fg(\#ff9900)root^fg() ${fs_free /}/${fs_size /} ${fs_bar 5,10 /} ^fg(\#66ccff)|^fg() ^fg(\#ff9900)data^fg() ${fs_free /mnt/data}/${fs_size /mnt/data} ${fs_bar 5,10 /mnt/data} ^fg(\#66ccff)|^fg() ${if_up wlan0}^fg(\#ff9900)wifi^fg() ${wireless_essid wlan0} ${wireless_link_qual wlan0}%$endif^p(30)^fg(\#ff9900).:[^fg()${time %a %d %H:%M}^fg(\#ff9900)]:.^fg()
