--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,7 +1,9 @@
 # ###################################
 # last edited: 05/01/2012
 # Changelog: 
-# 05/01/2012 added vim keybinds, changed bar behaviour
+# 09/01/12 dzen2 bar tweaking
+# 06/01/12 added '--no-startup-id' on line 27 to prevent clock mouse icon to appear on urxvt start 
+# 05/01/12 added vim keybinds, changed bar behaviour
 # ###################################
 
  
@@ -23,7 +25,7 @@ font -*-terminus-medium-*-*-*-12-*-*-*-*-*-iso10646-*
 floating_modifier Mod4
 
 # start a terminal
-bindsym Mod4+Return exec urxvtc
+bindsym Mod4+Return exec --no-startup-id urxvtc
 
 # kill focused window
 bindsym Mod4+Shift+q kill
@@ -82,8 +84,8 @@ bindsym Mod4+a focus parent
 #bindsym Mod4+d focus child
 
 # switch to workspace
-bindsym Mod4+1 workspace 1: com
-bindsym Mod4+2 workspace 2: www
+bindsym Mod4+1 workspace 1
+bindsym Mod4+2 workspace 2
 bindsym Mod4+3 workspace 3
 bindsym Mod4+4 workspace 4
 bindsym Mod4+5 workspace 5
@@ -94,8 +96,8 @@ bindsym Mod4+9 workspace 9
 bindsym Mod4+0 workspace 10
 
 # move focused container to workspace
-bindsym Mod4+Shift+1 move workspace 1: com
-bindsym Mod4+Shift+2 move workspace 2: www
+bindsym Mod4+Shift+1 move workspace 1
+bindsym Mod4+Shift+2 move workspace 2
 bindsym Mod4+Shift+3 move workspace 3
 bindsym Mod4+Shift+4 move workspace 4
 bindsym Mod4+Shift+5 move workspace 5
@@ -158,9 +160,8 @@ new_window 1pixel
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command conky
-	position bottom
-	mode hide
+        status_command conky | dzen2 -fg 'white' -w '1200' -x '130' -ta l -fn '-*-terminus-medium-*-*-*-12-*-*-*-*-*-iso10646-*'
+	position top
 }
 
 #######################################################################
@@ -173,3 +174,7 @@ bar {
 # Please remove the following exec line:
 #######################################################################
 #exec i3-config-wizard
+
+
+# Wallpaper
+exec feh --bg-scale /home/simo/docs/imgs/feb-12.jpg
