just minor tweaks

--- a/.mpd/mpd.conf
+++ b/.mpd/mpd.conf
@@ -203,8 +203,8 @@ audio_output {
 	mixer_type	"software"
 	mixer_device	"default"
 	mixer_control	"Master"
-	#options		"dev=dmixer"	#inserito su consiglio di archwiki, per utilizzare audio anche su altre applicazioni
-	#device		"plug:dmix"	#come dev=dmixer
+	options		"dev=dmixer"	#inserito su consiglio di archwiki, per utilizzare audio anche su altre applicazioni
+	device		"plug:dmix"	#come dev=dmixer
 	#device		"hw:0,0"	# optional
 	#format		"44100:16:2"	# optional
 	#mixer_device	"default"	# optional
